--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "serve -s dist",
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "heroku-postbuild": "ng build --prod",
     "serve:ssr:client": "node dist/client/server/server.mjs"
   },
   "private": true,
@@ -27,6 +28,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -46,7 +48,7 @@
     "typescript": "~5.6.2"
   },
   "engines": {
-  "node": "22.12.0",
-  "npm": "10.9.0"
-}
+    "node": "22.12.0",
+    "npm": "10.9.0"
+  }
 }
