--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "serve -s dist",
+    "start": "node sever.js",
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -14,8 +14,10 @@
   "dependencies": {
     "@angular/animations": "^19.0.0",
     "@angular/cdk": "^19.0.5",
+    "@angular/cli": "^19.0.7",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
     "@angular/material": "^19.0.5",
@@ -24,18 +26,17 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.7",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
     "serve": "^14.2.4",
     "tslib": "^2.3.0",
+    "typescript": "~5.6.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.7",
-    "@angular/cli": "^19.0.7",
-    "@angular/compiler-cli": "^19.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -44,8 +45,7 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "karma-jasmine-html-reporter": "~2.1.0"
   },
   "engines": {
     "node": "22.12.0",
