--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "serve -s dist/client -l $PORT",
+    "start": "http-server dist/client -p $PORT --push-state",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -26,6 +26,7 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.7",
     "express": "^4.21.2",
+    "http-server": "^14.1.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
